Request layer km functions using issue_direct

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 project(labstor)
 
 set(CMAKE_CXX_STANDARD 17)
-set(DRIVER_DIR ${CMAKE_SOURCE_DIR}/drivers)
+set(DRIVER_DIR ${CMAKE_SOURCE_DIR}/old/drivers)
 set(TRACE_DIR ${CMAKE_SOURCE_DIR}/trace)
 
 add_executable(verify_write ${DRIVER_DIR}/util/verify_write.c)
