--- a/src/kernel_server/Makefile
+++ b/src/kernel_server/Makefile
@@ -1,5 +1,7 @@
-obj-m = test_addrs.o
-test_addrs-objs := pagewalk.o
+obj-m = kernel_server.o
+kernel_server-objs += labstor_kernel_server.o
+kernel_server-objs += kpkg_devkit/request_queue.o
+kernel_server-objs += kpkg_devkit/unordered_map.o
 KVERSION = $(shell uname -r)
 all:
 	make -C /lib/modules/$(KVERSION)/build M=$(PWD) modules
