--- a/modules/kernel/secure_shmem/kernel/Makefile
+++ b/modules/kernel/secure_shmem/kernel/Makefile
@@ -1,9 +1,10 @@
 #DEVKIT allows module to be built
-EXTRA_CFLAGS=-I$(KPKG_DEVKIT)
+EXTRA_CFLAGS=-I$(KERNEL_SERVER) -I$(SOURCE_DIR) -Wno-missing-braces
+KBUILD_EXTRA_SYMBOLS += $(KERNEL_SERVER)/Module.symvers
 obj-m = secure_shmem.o
 secure_shmem-objs += shmem_kernel.o
-secure_shmem-objs += $(KPKG_DEVKIT)/request_queue.o
-secure_shmem-objs += $(KPKG_DEVKIT)/unordered_map.o
+#secure_shmem-objs += $(KERNEL_SERVER)/kernel_server.o
+#secure_shmem-objs += $(KERNEL_SERVER)/kpgk_devkit/request_queue.o
 KVERSION = $(shell uname -r)
 all:
 	make -C /lib/modules/$(KVERSION)/build M=$(PWD) modules
