--- a/modules/kernel/secure_shmem/CMakeLists.txt
+++ b/modules/kernel/secure_shmem/CMakeLists.txt
@@ -5,10 +5,6 @@ set(CMAKE_CXX_STANDARD 17)
 
 include_directories(include)
 
-set(KPKG_DEVKIT ${CMAKE_SOURCE_DIR}/src/kernel_servver/kpkg_devkit)
-
-#SHMEM KM
-add_custom_target(build-km ALL COMMAND cd server && make KPKG_DEVKIT=${KPKG_DEVKIT})
-
-#SHMEM CLIENT
-add_library(shmem_client client/shmem_user.cpp)
+set(KERNEL_SERVER_PATH ${CMAKE_SOURCE_DIR}/src/kernel_server)
+add_custom_target(build-km ALL COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR}/kernel && make KERNEL_SERVER=${KERNEL_SERVER_PATH} SOURCE_DIR=${CMAKE_CURRENT_SOURCE_DIR})
+#add_library(shmem_client client/shmem_user.cpp)
