Beginning shmem tests

--- a/modules/kernel/secure_shmem/CMakeLists.txt
+++ b/modules/kernel/secure_shmem/CMakeLists.txt
@@ -7,4 +7,4 @@ include_directories(include)
 
 set(KERNEL_SERVER_PATH ${CMAKE_SOURCE_DIR}/src/kernel_server)
 add_custom_target(build-km ALL COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR}/kernel && make KERNEL_SERVER=${KERNEL_SERVER_PATH} SOURCE_DIR=${CMAKE_CURRENT_SOURCE_DIR})
-#add_library(shmem_client client/shmem_user.cpp)
+add_library(shmem_client client/shmem_user_netlink.cpp)
