--- a/src/kernel_server/Makefile
+++ b/src/kernel_server/Makefile
@@ -1,7 +1,8 @@
-obj-m = kernel_server.o
-kernel_server-objs += labstor_kernel_server.o
-kernel_server-objs += kpkg_devkit/request_queue.o
-kernel_server-objs += kpkg_devkit/unordered_map.o
+EXTRA_CFLAGS=-I$(LABSTOR_INCLUDE) -Wno-missing-braces
+obj-m = labstor_kernel_server.o
+labstor_kernel_server-objs += kernel_server.o
+labstor_kernel_server-objs += kpkg_devkit/request_queue.o
+labstor_kernel_server-objs += kpkg_devkit/unordered_map.o
 KVERSION = $(shell uname -r)
 all:
 	make -C /lib/modules/$(KVERSION)/build M=$(PWD) modules
