--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,17 +1,18 @@
-devices:
-  - dev_sdb:
-      type: block
-      dev_file: "/dev/sdb"
-      mount: "dev:sdb"
-
-
-io_system_types:
-  - filesystem:
-      server: /home/lukemartinlogan/Documents/Projects/PhD/labstor/cmake-build-debug/generic_posix_client.so
-      client: /home/lukemartinlogan/Documents/Projects/PhD/labstor/cmake-build-debug/generic_posix_server.so
-
-io_systems:
-  - labstor_fs:
-      type: filesystem
-      server: /home/lukemartinlogan/Documents/Projects/PhD/labstor/cmake-build-debug/labstor_fs_trusted.so
-      client: /home/lukemartinlogan/Documents/Projects/PhD/labstor/cmake-build-debug/labstor_fs_untrusted.so
+modules:
+  secure_shmem:
+      trusted_client: "/home/lukemartinlogan/Documents/Projects/PhD/labstor/cmake-build-debug/modules/kernel/secure_shmem/secure_shmem_client.so"
+      server: "/home/lukemartinlogan/Documents/Projects/PhD/labstor/cmake-build-debug/modules/kernel/secure_shmem/secure_shmem_client.so"
+work_orchestrator:
+  time_slice_us: 1000
+  work_queue_size_kb: 4
+  work_queue_unit_bytes: 256
+  policy: round-robin
+  kernel_workers:
+    - {worker_id: 1, cpu_id: 1}
+    - {worker_id: 2, cpu_id: 2}
+  server_workers:
+    - {worker_id: 1, cpu_id: 3}
+    - {worker_id: 2, cpu_id: 4}
+queue_manager:
+  queue_size_kb: 4
+  queue_unit_bytes: 256
