--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,14 @@ set(CMAKE_CXX_STANDARD 17)
 
 include_directories(include modules/kernel)
 
-######MAIN REPO
-#Build labstor kernel server
+######KERNEL SERVER
 add_custom_target(build_labstor_kernel_server ALL COMMAND cd ${CMAKE_SOURCE_DIR}/src/kernel_server && make LABSTOR_INCLUDE=${CMAKE_SOURCE_DIR}/include)
 add_custom_target(clean_labstor_kernel_server COMMAND cd ${CMAKE_SOURCE_DIR}/src/kernel_server && make clean)
-#Build labstor kernel server client
+
+######KERNEL CLIENT
 add_library(labstor_kernel_client ${CMAKE_SOURCE_DIR}/src/kernel_client/kernel_client.cpp)
-#Build labstor trusted server
+
+######LABSTOR USERSPACE SERVER
 add_executable(labstor_trusted_server
         src/userspace_server/server.cpp
         src/userspace_server/worker.cpp
@@ -22,43 +23,21 @@ add_dependencies(labstor_trusted_server
 target_link_libraries(labstor_trusted_server
         pthread rt dl labstor_kernel_client yaml-cpp
         secure_shmem_client_netlink worker_client_netlink)
-#Build labstor trusted server client
+
+######LABSTOR USERSPACE CLIENT
 add_library(labstor_client_library src/userspace_client/client.cpp)
 target_link_libraries(labstor_client_library rt dl)
 
-######MODULES
-add_subdirectory(modules/kernel/secure_shmem)
-add_subdirectory(modules/kernel/workers)
-add_custom_target(clean_all COMMAND
-        make clean &&
-        make clean_labstor_kernel_server &&
-        make clean_secure_shmem &&
-        make clean_kernel_worker)
-
-#######Unit tests
-#Client to trusted server tests
-add_executable(client_to_trusted_server_exec test/unit/client_to_trusted_server/test_client.cpp)
-add_dependencies(client_to_trusted_server_exec labstor_client_library)
-target_link_libraries(client_to_trusted_server_exec labstor_client_library)
-
-#Client to kernel server tests
-add_executable(client_to_kernel_exec test/unit/client_to_kernel/test_kernel_client.cpp)
-add_dependencies(client_to_kernel_exec labstor_kernel_client)
-target_link_libraries(client_to_kernel_exec labstor_kernel_client)
-
-#Shared memory creation
-add_executable(test_shmem_exec test/unit/test_shmem/test_shmem.cpp)
-add_dependencies(test_shmem_exec labstor_kernel_client secure_shmem_client_netlink)
-target_link_libraries(test_shmem_exec labstor_kernel_client secure_shmem_client_netlink)
-add_custom_target(test_shmem ${CMAKE_BINARY_DIR}/test_shmem_exec)
-
-########UTIL
+######UTIL
 add_custom_target(start_kernel_server COMMAND LABSTOR_ROOT=${CMAKE_SOURCE_DIR} LABSTOR_BIN=${CMAKE_BINARY_DIR} bash ${CMAKE_SOURCE_DIR}/util/start_kernel_server.sh)
 add_custom_target(insert_kernel_modules COMMAND LABSTOR_ROOT=${CMAKE_SOURCE_DIR} LABSTOR_BIN=${CMAKE_BINARY_DIR} bash ${CMAKE_SOURCE_DIR}/util/insert_kernel_modules.sh)
 add_custom_target(remove_kernel_modules COMMAND LABSTOR_ROOT=${CMAKE_SOURCE_DIR} LABSTOR_BIN=${CMAKE_BINARY_DIR} bash ${CMAKE_SOURCE_DIR}/util/remove_kernel_modules.sh)
 add_custom_target(stop_kernel_server COMMAND LABSTOR_ROOT=${CMAKE_SOURCE_DIR} LABSTOR_BIN=${CMAKE_BINARY_DIR} bash ${CMAKE_SOURCE_DIR}/util/stop_kernel_server.sh)
 add_custom_target(start_trusted_server COMMAND LABSTOR_ROOT=${CMAKE_SOURCE_DIR} LABSTOR_BIN=${CMAKE_BINARY_DIR} bash ${CMAKE_SOURCE_DIR}/util/start_server.sh)
 
+######MODULES & TESTS
+add_subdirectory(modules)
+add_subdirectory(test)
 
 ##########NOTES
 
