--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -8,9 +8,11 @@ include_directories(include kernel io_systems)
 ######MODULES
 add_subdirectory(kernel/secure_shmem)
 add_subdirectory(kernel/workers)
+add_subdirectory(kernel/kpkg_devkit)
 add_custom_target(clean_all COMMAND
         make clean &&
         make clean_labstor_kernel_server &&
         make clean_secure_shmem &&
-        make clean_kernel_worker)
+        make clean_kernel_worker &&
+        make clean_kpkg_devkit)
 add_dependencies(clean_all clean_labstor_kernel_server)
