--- a/src/kernel_server/Makefile
+++ b/src/kernel_server/Makefile
@@ -1,8 +1,6 @@
-EXTRA_CFLAGS=-I$(LABSTOR_INCLUDE) -Wno-missing-braces
+EXTRA_CFLAGS=-I$(LABSTOR_INCLUDE) -I$(KPKG_DEVKIT_INCLUDE) -Wno-missing-braces
 obj-m = labstor_kernel_server.o
 labstor_kernel_server-objs += kernel_server.o
-labstor_kernel_server-objs += kpkg_devkit/request_queue.o
-labstor_kernel_server-objs += kpkg_devkit/unordered_map.o
 KVERSION = $(shell uname -r)
 all:
 	make -C /lib/modules/$(KVERSION)/build M=$(PWD) modules
