--- a/modules/kernel/kpkg_devkit/CMakeLists.txt
+++ b/modules/kernel/kpkg_devkit/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 
 include_directories(include)
 
-add_custom_target(build_kpkg_devkit ALL COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR}/kernel &&
-        make LABSTOR_INCLUDE=${CMAKE_SOURCE_DIR}/include)
-add_custom_target(clean_kpkg_devkit COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR}/kernel && make clean)
+add_custom_target(build_kpkg_devkit ALL COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR} && make
+        CMAKE_SOURCE_DIR=${CMAKE_SOURCE_DIR}
+        CMAKE_CURRENT_SOURCE_DIR=${CMAKE_CURRENT_SOURCE_DIR})
+add_custom_target(clean_kpkg_devkit COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR} && make clean)
