Request queue unit test compiles

--- a/test/unit/request_queue_client_kernel/CMakeLists.txt
+++ b/test/unit/request_queue_client_kernel/CMakeLists.txt
@@ -6,8 +6,11 @@ set(CMAKE_CXX_STANDARD 17)
 include_directories(include)
 
 set(KERNEL_SERVER_PATH ${CMAKE_SOURCE_DIR}/src/kernel_server)
-add_custom_target(build_request_queue_client_kernel ALL COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR}/kernel &&
-        make KERNEL_SERVER=${KERNEL_SERVER_PATH} SOURCE_DIR=${CMAKE_CURRENT_SOURCE_DIR} LABSTOR_INCLUDE=${CMAKE_SOURCE_DIR}/include)
+add_custom_target(build_request_queue_client_kernel ALL COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR} && make
+        CMAKE_SOURCE_DIR=${CMAKE_SOURCE_DIR}
+        CMAKE_CURRENT_SOURCE_DIR=${CMAKE_CURRENT_SOURCE_DIR})
 add_dependencies(build_request_queue_client_kernel build_labstor_kernel_server)
 add_custom_target(clean_build_request_queue_client_kernel COMMAND cd ${CMAKE_CURRENT_SOURCE_DIR} && make clean)
-add_executable(request_queue_client_kernel_exec netlink_client/shmem_user_netlink.cpp)
+add_executable(request_queue_client_kernel_exec request_queue_client.cpp)
+add_dependencies(request_queue_client_kernel_exec secure_shmem_client_netlink labstor_kernel_client)
+target_link_libraries(request_queue_client_kernel_exec secure_shmem_client_netlink labstor_kernel_client)
