--- a/test/unit/request_queue_client_kernel/CMakeLists.txt
+++ b/test/unit/request_queue_client_kernel/CMakeLists.txt
@@ -14,3 +14,5 @@ add_custom_target(clean_build_request_queue_client_kernel COMMAND cd ${CMAKE_CUR
 add_executable(request_queue_client_kernel_exec request_queue_client.cpp)
 add_dependencies(request_queue_client_kernel_exec secure_shmem_client_netlink labstor_kernel_client)
 target_link_libraries(request_queue_client_kernel_exec secure_shmem_client_netlink labstor_kernel_client)
+
+add_custom_target(request_queue_client_kernel_test ${CMAKE_CURRENT_BINARY_DIR}/request_queue_client_kernel_exec)
