--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,11 +1,9 @@
 modules:
   secure_shmem:
-      trusted_client: "/home/lukemartinlogan/Documents/Projects/PhD/labstor/cmake-build-debug/modules/kernel/secure_shmem/secure_shmem_client.so"
+      client: "/home/lukemartinlogan/Documents/Projects/PhD/labstor/cmake-build-debug/modules/kernel/secure_shmem/secure_shmem_client.so"
       server: "/home/lukemartinlogan/Documents/Projects/PhD/labstor/cmake-build-debug/modules/kernel/secure_shmem/secure_shmem_client.so"
 work_orchestrator:
   time_slice_us: 1000
-  work_queue_size_kb: 4
-  work_queue_unit_bytes: 256
   policy: round-robin
   kernel_workers:
     - {worker_id: 1, cpu_id: 1}
@@ -13,6 +11,8 @@ work_orchestrator:
   server_workers:
     - {worker_id: 1, cpu_id: 3}
     - {worker_id: 2, cpu_id: 4}
-queue_manager:
-  queue_size_kb: 4
-  queue_unit_bytes: 256
+ipc_manager:
+  kernel_shmem_mb: 1
+  internal_shmem_mb: 16
+  process_shmem_kb: 4
+  allocator_unit_bytes: 128
