--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,5 +4,5 @@ project(labstor)
 set(CMAKE_CXX_STANDARD 17)
 
 add_subdirectory(unit)
+add_subdirectory(integration)
 add_subdirectory(performance)
-#add_subdirectory()
