--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -36,10 +36,10 @@ add_executable(test_shmem_unordered_map unordered_map/test.cpp)
 #add_custom_target(test_request_queue ${CMAKE_CURRENT_BINARY_DIR}/request_queue)
 
 ######SHARED MEMORY REQUEST QUEUE (USER - USER)
-#add_executable(test_shmem_request_queue_exec request_queue/client_client/shmem_request_queue.cpp)
-#add_dependencies(test_shmem_request_queue_exec labstor_kernel_client secure_shmem_client_netlink)
-#target_link_libraries(test_shmem_request_queue_exec labstor_kernel_client secure_shmem_client_netlink mpi)
-#add_custom_target(test_shmem_request_queue_path echo ${CMAKE_CURRENT_BINARY_DIR}/test_shmem_request_queue_exec)
+add_executable(test_shmem_request_queue_exec request_queue/client_client/shmem_request_queue.cpp)
+add_dependencies(test_shmem_request_queue_exec labstor_server_library)
+target_link_libraries(test_shmem_request_queue_exec labstor_server_library mpi)
+add_custom_target(test_shmem_request_queue_path echo ${CMAKE_CURRENT_BINARY_DIR}/test_shmem_request_queue_exec)
 
 ######SHARED MEMORY REQUEST QUEUE (USER - KERNEL)
 #add_subdirectory(request_queue/client_kernel)
