--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -10,7 +10,7 @@ add_subdirectory(kernel/secure_shmem)
 add_subdirectory(kernel/workers)
 add_subdirectory(kernel/kpkg_devkit)
 add_subdirectory(registrar)
-add_custom_target(clean_source COMMAND
+add_custom_target(clean_modules COMMAND
         cd ${CMAKE_BINARY_DIR} && make clean &&
         cd ${CMAKE_BINARY_DIR} && make clean_labstor_kernel_server &&
         cd ${CMAKE_BINARY_DIR} && make clean_secure_shmem &&
