--- a/modules/kernel/blkdev_table/CMakeLists.txt
+++ b/modules/kernel/blkdev_table/CMakeLists.txt
@@ -3,7 +3,7 @@ project(labstor)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(MODULE_NAME worker)
+set(MODULE_NAME blkdev_table)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/include)
 
 #BUILD KERNEL MODULE
@@ -40,4 +40,3 @@ if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/server)
     add_dependencies(${MODULE_NAME}_server labstor_server_library)
     target_link_libraries(${MODULE_NAME}_server labstor_server_library)
 endif()
-
