--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -7,6 +7,7 @@ include_directories(include kernel io_systems)
 
 ######MODULES
 add_subdirectory(kernel/secure_shmem)
+add_subdirectory(kernel/ipc_manager)
 add_subdirectory(kernel/blkdev_table)
 add_subdirectory(kernel/workers)
 add_subdirectory(registrar)
@@ -14,5 +15,6 @@ add_custom_target(clean_modules COMMAND
         cd ${CMAKE_BINARY_DIR} && make clean &&
         cd ${CMAKE_BINARY_DIR} && make clean_labstor_kernel_server &&
         cd ${CMAKE_BINARY_DIR} && make clean_secure_shmem &&
+        cd ${CMAKE_BINARY_DIR} && make clean_ipc_manager &&
         cd ${CMAKE_BINARY_DIR} && make clean_blkdev_table &&
         cd ${CMAKE_BINARY_DIR} && make clean_worker)
