--- a/modules/kernel/ipc_manager/CMakeLists.txt
+++ b/modules/kernel/ipc_manager/CMakeLists.txt
@@ -3,7 +3,7 @@ project(labstor)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(MODULE_NAME registrar)
+set(MODULE_NAME ipc_manager)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/include)
 
 #BUILD KERNEL MODULE
@@ -37,6 +37,6 @@ endif()
 #BUILD USERSPACE SERVER
 if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/server)
     add_library(${MODULE_NAME}_server server/${MODULE_NAME}_server.cpp)
-    #add_dependencies(${MODULE_NAME}_server labstor_server_library)
-    #target_link_libraries(${MODULE_NAME}_server labstor_server_library)
+    add_dependencies(${MODULE_NAME}_server labstor_server_library)
+    target_link_libraries(${MODULE_NAME}_server labstor_server_library)
 endif()
