--- a/modules/kernel/ipc_manager/kernel/Makefile
+++ b/modules/kernel/ipc_manager/kernel/Makefile
@@ -1,13 +1,11 @@
 LABSTOR_KERNEL_SERVER=$(CMAKE_SOURCE_DIR)/src/kernel/server
 LABSTOR_INCLUDE=$(CMAKE_SOURCE_DIR)/include
 LABSTOR_MODULES=$(CMAKE_SOURCE_DIR)/modules/kernel
-LABSTOR_SHMEM_MODULE=$(LABSTOR_MODULES)/secure_shmem/kernel
-LABSTOR_IPC_MANAGER_MODULE=$(LABSTOR_MODULES)/ipc_manager/kernel
 
 EXTRA_CFLAGS=-I$(LABSTOR_KERNEL_SERVER) -I$(LABSTOR_INCLUDE) -I$(LABSTOR_MODULES) -DKERNEL_BUILD -Wno-missing-braces
-KBUILD_EXTRA_SYMBOLS += $(LABSTOR_KERNEL_SERVER)/Module.symvers $(LABSTOR_SHMEM_MODULE)/Module.symvers $(LABSTOR_IPC_MANAGER_MODULE)/Module.symvers
-obj-m = worker.o
-worker-objs += worker_kernel.o
+KBUILD_EXTRA_SYMBOLS += $(LABSTOR_KERNEL_SERVER)/Module.symvers  $(LABSTOR_MODULES)/secure_shmem/kernel/Module.symvers
+obj-m = ipc_manager.o
+ipc_manager-objs += ipc_manager_kernel.o
 KVERSION = $(shell uname -r)
 all:
 	make -C /lib/modules/$(KVERSION)/build M=$(PWD) modules
